objects/PIT_SCH__Audit_Response_Item__c.object
<CustomObject>
    <fields>
        <fullName>PITCHER_Q__Market__c</fullName>
        <formula>CreatedBy.PITCHER_Q__Market__c</formula>
        <label>Market</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PIT_SCH__Audit_Response__c</fullName>
        <label>Audit Response</label>
        <referenceTo>PIT_SCH__Audit_Response__c</referenceTo>
        <relationshipName>Audit_Response_Items</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <reparentableMasterDetail>true</reparentableMasterDetail>
        <type>MasterDetail</type>
        <writeRequiresMasterRead>true</writeRequiresMasterRead>
    </fields>
    <fields>
        <fullName>PIT_SCH__Audited_Account_ID__c</fullName>
        <formula>CASESAFEID( PIT_SCH__Audit_Response__r.PIT_SCH__Account__r.Id)</formula>
        <label>Audited Account ID</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PIT_SCH__Audited_Account__c</fullName>
        <formula>PIT_SCH__Audit_Response__r.PIT_SCH__Account__r.Name</formula>
        <label>Audited Account</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PIT_SCH__Availability_Format__c</fullName>
        <label>Availability Format</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Sample</fullName>
                </value>
                <value>
                    <fullName>SE Stand (32x80)</fullName>
                </value>
                <value>
                    <fullName>SE Stand (60x80)</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>PIT_SCH__Availability__c</fullName>
        <label>Availability</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Not Available</fullName>
                </value>
                <value>
                    <fullName>Available on Exposition</fullName>
                </value>
                <value>
                    <fullName>Available on Stock</fullName>
                </value>
                <value>
                    <fullName>Available on Exposition and Stock</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>PIT_SCH__Comment__c</fullName>
        <label>Comment</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>PIT_SCH__Company__c</fullName>
        <formula>PIT_SCH__Line_of_Equipment__r.PIT_SCH__Company__r.Name</formula>
        <label>Company</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PIT_SCH__From_Last_Audit__c</fullName>
        <formula>PIT_SCH__Audit_Response__r.PIT_SCH__From_Last_Audit__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>From Last Audit</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>PIT_SCH__Line_of_Equipment__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Product Line</label>
        <referenceTo>PIT_SCH__Line_of_Equipment__c</referenceTo>
        <relationshipLabel>Pitcher Audit Response Items</relationshipLabel>
        <relationshipName>Audit_Response_Items</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>PIT_SCH__MigrationID__c</fullName>
        <externalId>true</externalId>
        <label>MigrationID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PIT_SCH__Price_Three__c</fullName>
        <label>Price Three</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>PIT_SCH__Price_Two__c</fullName>
        <label>Price Two</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>PIT_SCH__Price__c</fullName>
        <label>Price</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>PIT_SCH__Quantity__c</fullName>
        <label>Quantity</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>PIT_SCH__Reference_Attribute_1__c</fullName>
        <formula>CASESAFEID(PIT_SCH__Reference__r.PIT_SCH__Attribute_1__c)</formula>
        <label>Reference Attribute 1</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PIT_SCH__Reference_Attribute_2__c</fullName>
        <formula>CASESAFEID(PIT_SCH__Reference__r.PIT_SCH__Attribute_2__c)</formula>
        <label>Reference Attribute 2</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PIT_SCH__Reference_Attribute_3__c</fullName>
        <formula>CASESAFEID(PIT_SCH__Reference__r.PIT_SCH__Attribute_3__c)</formula>
        <label>Reference Attribute 3</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PIT_SCH__Reference_Company__c</fullName>
        <formula>IF( ISBLANK(PIT_SCH__Reference__c) , PIT_SCH__Line_of_Equipment__r.PIT_SCH__Company__r.Name , PIT_SCH__Reference__r.PIT_SCH__Line_of_Equipment__r.PIT_SCH__Company__r.Name)</formula>
        <label>Reference Company</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PIT_SCH__Reference_LoE__c</fullName>
        <formula>IF( ISBLANK(PIT_SCH__Reference__c) , PIT_SCH__Line_of_Equipment__r.Name, PIT_SCH__Reference__r.PIT_SCH__Line_of_Equipment__r.Name)</formula>
        <label>Reference Product Line</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PIT_SCH__Reference_Name__c</fullName>
        <formula>PIT_SCH__Reference__r.Name</formula>
        <label>Reference Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PIT_SCH__Reference_Type_Reporting__c</fullName>
        <formula>TEXT(PIT_SCH__Reference__r.PIT_SCH__Reference_Type__c)</formula>
        <label>Reference Type for Insight</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PIT_SCH__Reference_Type__c</fullName>
        <formula>TEXT(PIT_SCH__Reference__r.PIT_SCH__Reference_Type__c)</formula>
        <label>Reference Type</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PIT_SCH__Reference__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Reference</label>
        <referenceTo>PIT_SCH__SKU__c</referenceTo>
        <relationshipName>Audit_Response_Items</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>PIT_SCH__Status__c</fullName>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Requested</fullName>
                </value>
                <value>
                    <fullName>Delivered</fullName>
                </value>
                <value>
                    <fullName>Canceled</fullName>
                </value>
                <value>
                    <fullName>On Hold</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>PIT_SCH__User__c</fullName>
        <formula>CreatedBy.FirstName &amp; &quot; &quot; &amp; CreatedBy.LastName</formula>
        <label>User</label>
        <type>Text</type>
    </fields>
    <label>Pitcher Audit Response Item</label>
    <listViews>
        <fullName>PIT_SCH__All</fullName>
        <columns>NAME</columns>
        <columns>PIT_SCH__Audit_Response__c</columns>
        <columns>PIT_SCH__Reference_Type__c</columns>
        <columns>PIT_SCH__Company__c</columns>
        <columns>PIT_SCH__Line_of_Equipment__c</columns>
        <columns>PIT_SCH__Reference__c</columns>
        <columns>PIT_SCH__Availability__c</columns>
        <columns>PIT_SCH__Availability_Format__c</columns>
        <columns>PIT_SCH__Quantity__c</columns>
        <columns>PIT_SCH__Status__c</columns>
        <columns>PIT_SCH__Price__c</columns>
        <columns>CREATEDBY_USER</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>ARI-{0000}</displayFormat>
        <label>Audit Response Item Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Pitcher Audit Response Items</pluralLabel>
    <recordTypes>
        <fullName>PIT_SCH__Line_of_Equipment_Audit_Item</fullName>
        <active>true</active>
        <label>Line of Equipment Audit Item</label>
    </recordTypes>
    <recordTypes>
        <fullName>PIT_SCH__Merchandising_Audit_Item</fullName>
        <active>true</active>
        <label>Merchandising Audit Item</label>
    </recordTypes>
    <recordTypes>
        <fullName>PIT_SCH__Reference_Audit_Item</fullName>
        <active>true</active>
        <label>Reference Audit Item</label>
    </recordTypes>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>